--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                 document.getElementById('color-question').style.display = 'none';
                 document.getElementById('next-button').style.display = 'block';
             } else {
-                alert('Incorrect color. Please try again.');
+                alert('Thappa Sollita chello correct ahh sollu❣️');
             }
         }
         
         function goNext() {
-            alert('Moving to the next section!');
+            alert('Welcome chello❣️');
         }
     </script>
 </body>
